Polishing View + Improving Accessibility

--- a/views/home.erb
+++ b/views/home.erb
@@ -6,33 +6,33 @@
     </div>
 
     <div class="row mt-3">
-      <div class="col">
-        <h3><%= @story.description %></h3>
+      <div class="col text-center">
+        <p><%= @story.description %></p>
       </div>
     </div>
 
     <div class="row mt-5">
       <div class="col">
-        <p>Check out the story characters:</p>
+        <h2>Check out the story characters:</h2>
       </div>
     </div>
 
-    <div class="row mt-3">
+    <main class="row mt-3">
       <% @characters.each do |character| %>
         <div class="col-md-4 mb-3">
           <div class="card h-100">
-            <img class="card-img-top" src="<%= character.image_url %>" alt="<%= character.name %>" style="object-fit: fill; width: 100%; height: 200px;">
+            <img class="card-img-top" src="<%= character.image_url %>" alt="Graphic: <%= character.name %>" style="object-fit: fill; width: 100%; height: 200px;">
             <div class="card-body">
-              <h5 class="card-title"><%= character.name %></h5>
+              <h3 class="card-title"><%= character.name %></h3>
             </div>
           </div>
         </div>
       <% end %>
-    </div>
+    </main>
 
-  <div class="row m-3">
+  <footer class="row m-3">
     <div class="col text-center">
       <a href="http://marvel.com">Data provided by Marvel. © 2024 MARVEL</a>
     </div>
-  </div>
+  </footer>
 </div>
